--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             var d = new Date()
             var hour = d.getHours();
             if (true) {
-                document.getElementById('hoi').innerHTML = "<img src='ja.jpg' alt='ja'/><h2>Het is tijd voor bier! Proost!</h2>"
+                document.getElementById('hoi').innerHTML = "<img src='http://www.ishetaltijdvoorbier.nl/ja.jpg' alt='ja'/><h2>Het is tijd voor bier! Proost!</h2>"
             }
             else {
                 // Never happens
-                document.getElementById('hoi').innerHTML = "<img src='nee.jpg' alt='nee'/><h2>Helaas, het is nog geen tijd voor bier. Het is nog te vroeg</h2>"
+                document.getElementById('hoi').innerHTML = "<img src='http://www.ishetaltijdvoorbier.nl/ja.jpg' alt='nee'/><h2>Helaas, het is nog geen tijd voor bier. Het is nog te vroeg</h2>"
             }
         </script>
     </body>
